--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -5,9 +5,9 @@
     width: 250px;
     height: 300px;
     border-radius: 20px;
-    background-color: rgb(170, 86, 107);
+    background-color: rgb(59, 63, 63);
     cursor: pointer;
-    box-shadow: #1e2020 2px 2px 10px 4px;
+    /* box-shadow: #505151fa 2px 2px 10px 4px; */
 
 }
 .image-class{
@@ -18,6 +18,8 @@
 
 .image-class:hover{
     transform: translateX(-5px);
+    box-shadow: #505151fa 2px 2px 10px 4px;
+    border-radius: 20px;
 }
 h2{
     margin-top: 2px;
@@ -28,15 +30,15 @@ h3{
     color: white;
 }
 
-button{
+/* button{
     float:right;
     margin: 0 20px 20px 0;
     padding: 10px;
     border-radius: 20px;
     color:white;
-    background-color: rgb(73, 198, 69);
+    background-color: rgb(69, 161, 198);
     cursor: pointer;
-}
+} */
 
 
 
