--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+
 .main-container{
     user-select: none;
     position: relative;
@@ -5,8 +7,11 @@
     width: 250px;
     height: 300px;
     border-radius: 20px;
+    text-transform: uppercase;
+    font-family: 'Poor Story', system-ui;
     background-color: rgb(59, 63, 63);
     cursor: pointer;
+    border: 2px solid black;
     /* box-shadow: #505151fa 2px 2px 10px 4px; */
 
 }
@@ -15,6 +20,7 @@
     height: 150px;
     cursor: pointer;
 }
+
 
 .image-class:hover{
     transform: translateX(-5px);
